frontend-ruby.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-ruby
spec:
  selector:
    matchLabels:
      app: ruby
      role: application
      tier: frontend
  template:
    metadata:
      labels:
        app: ruby
        role: application
        tier: frontend
    spec:
      containers:
        - name: frontend-ruby
          image: quay.io/fairwinds/k8s-workshop:latest
          command: ["ruby", "app/app.rb"]
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 3
            periodSeconds: 3
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 1
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
          ports:
          - containerPort: 8080
            name: http
          resources:
            limits:
              cpu: 100m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 200Mi
