redis-backend.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-backend
  labels:
    app: redis
    role: db
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
        role: db
        tier: backend
    spec:
      containers:
      - name: redis-db
        image: redis
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
