frontend-ruby-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-ruby-service
  labels:
    app: frontend
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: ruby
    role: application
    tier: frontend
