redis-backend-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-backend-service
  labels:
    app: redis
    role: db
    tier: backend
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
        app: redis
        role: db
        tier: backend
